Tue Aug  7 12:37:45 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/Component_Handler.cpp:
          Fixed incorrect debug statements

        * ciao/Deployment/Interceptors/Name_Utilities.h:
          Layout changes

Tue Aug  7 08:01:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/OpenDDS/opendds_lem_stub.mpc:
          Added missing base to get the library installed

Mon Aug  6 18:22:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm.mpb:
        * connectors/dds4ccm/idl/OpenDDS/opendds_lem_stub.mpc:
          Install fixes and corrected library name

Mon Aug  6 06:43:33 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_opendds_lem_stub.mpb:
          Corrected library name for opendds lem

Sat Aug  4 19:21:49 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/OpenDDS/opendds_lem_stub.mpc:
          Fixed install problems

Fri Aug  3 07:42:52 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/OpenDDS/opendds_lem_stub.mpc:
          Use -Ssc instead of -SS

Thu Aug  2 18:01:01 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/OpenDDS/opendds_lem_stub.mpc:
          Fixed mpc problems when opendds is not available

Thu Aug  2 13:59:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm.mpb:
        * connectors/dds4ccm/idl/dds4ccm_lem_stub.mpc:
          Updated after statements

Thu Aug  2 12:04:57 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/OpenDDS/opendds_lem_stub.mpc:
          Explicit list output files

Thu Aug  2 09:52:00 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_opendds_lem_stub.mpb:
          New file for dds4ccm with opendds

Thu Aug  2 09:34:14 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
